# predictiveMIDI

./: .gitignore  LICENSE  PLAN.md  README.md  download_midi_datasets.py  manage.py  pyproject.toml  pytest.ini  scratch.py
checkpoints_hierarchical/final/: metadata.json  pred_weight_2.npy  skip_weight_0.npy  skip_weight_1.npy  temporal_weight_1.npy  temporal_weight_3.npy
checkpoints_hierarchical/step_50/: pred_weight_0.npy  pred_weight_1.npy  pred_weight_3.npy  temporal_weight_0.npy  temporal_weight_2.npy  temporal_weight_4.npy
corpus/: admin.py  models.py  urls.py  views.py
corpus/migrations/: 0001_initial.py
corpus/services/: batch_generator.py  curriculum.py  dataset_scanner.py  prefetch.py  scanner.py  vocabulary.py
corpus/tests/: test_batch_generator.py  test_corpus_index.py  test_curriculum.py  test_dataset_scanner.py  test_prefetch.py  test_quality.py  test_scanner.py  test_vocabulary.py
docs/data/: midi-datasets.md
docs/plans/: 2026-02-26-pc-jam-grid-design.md  2026-02-26-pc-jam-grid-implementation.md  2026-03-10-hierarchical-pc-architecture.md
frontend/: dashboard.html  design.html  index.html
frontend/js/: app.js  dashboard.js  design-blocks.js  design-canvas.js  design.js  grid-compute.js  grid-renderer.js  loss-chart.js  (+2 more)
pcjam/: settings.py  urls.py  wsgi.py
scripts/: 01_rebuild_corpus.sh  02_train_hebbian.sh  03_train_autodiff.sh  04_monitor.sh  05_plot.sh  06_compare.sh  compare_hebbian_vs_autodiff.sh  monitor.sh  plot_metrics.py  run_all.sh  train_async.sh
tests/: test_integration.py
training/: admin.py  models.py  urls.py  views.py
(+36 files in other folders)
